--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="tab_title_items">
-	    <item>字体</item>
-	    <item>控件</item>
 	    <item>主题</item>
+	    <item>文件</item>
+	    <item>翻译</item>
 	    <item>窗体</item>
 	    <item>其他</item>
 	</string-array>
