--- a/app/src/main/res/layout/tab03.xml
+++ b/app/src/main/res/layout/tab03.xml
@@ -9,9 +9,30 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Tab3" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="翻译文件路径：" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="/sdcard/translate" />
+    </LinearLayout>
+
+
     <Button
         android:id="@+id/btn_translate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="翻译"/>
+        android:text="翻译" />
 </LinearLayout>
