--- a/app/src/main/res/layout/tab03.xml
+++ b/app/src/main/res/layout/tab03.xml
@@ -32,7 +32,7 @@
 
     <Button
         android:id="@+id/btn_translate"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="翻译" />
 </LinearLayout>
