--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,7 +4,7 @@
 	    <item>主题</item>
 	    <item>文件</item>
 	    <item>翻译</item>
-	    <item>窗体</item>
+	    <item>测试</item>
 	    <item>其他</item>
 	</string-array>
 
