--- a/app/src/main/res/layout/tab04.xml
+++ b/app/src/main/res/layout/tab04.xml
@@ -78,4 +78,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="打开ADB"/>
+    <Button
+        android:id="@+id/btn_open_pdf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="打开PDF"/>
 </LinearLayout>
