--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="tab_title_items">
-	    <item>KReader</item>
+	    <item>Onyx</item>
 	    <item>文件</item>
 	    <item>翻译</item>
 	    <item>测试</item>
@@ -9,7 +9,7 @@
 	</string-array>
 
 	<string-array name="tab_layout_items">
-		<item>@layout/tab01</item>
+		<item>@layout/fragment_tab1</item>
 		<item>@layout/tab02</item>
 		<item>@layout/tab03</item>
 		<item>@layout/tab04</item>
