--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="mainModel"
-            type="com.onyx.test.mytest.viewmodel.ActivityMainModel" />
+            type="com.onyx.test.mytest.binding.ActivityMainModel" />
     </data>
 
     <LinearLayout
