--- a/app/src/main/res/layout/fragment_tab4.xml
+++ b/app/src/main/res/layout/fragment_tab4.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="bean"
-            type="com.onyx.test.mytest.viewmodel.FragmentTab04Model" />
+            type="com.onyx.test.mytest.binding.FragmentTab04Model" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:hint="请输入文件名" />
+                android:hint="请输入文件名"
+                android:text="@{bean.selectfilePath}"/>
 
             <Button
                 android:id="@+id/btn_select_file"
