--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:gravity="center"
-            android:text="@{bean.testProjectName}"
+            android:text="@string/kreader_test"
             android:textSize="20sp" />
 
         <LinearLayout
