--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -4,6 +4,7 @@
 
     <data>
         <variable name="bean" type="com.onyx.test.mytest.binding.FragmentTab01Model"/>
+        <variable name="readerSlideshowBean" type="com.onyx.test.mytest.model.bean.ReaderSlideshowBean"/>
     </data>
 
     <LinearLayout
@@ -35,7 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{bean.testFilePath}"
+                android:text="@{readerSlideshowBean.testFilePath}"
                 android:textSize="@dimen/title_level2_text_size" />
 
             <Button
@@ -65,7 +66,7 @@
                 android:layout_weight="1"
                 android:inputType="number"
                 android:maxLength="2"
-                android:text="@{String.valueOf(bean.slideshowInterval)}"
+                android:text="@{String.valueOf(readerSlideshowBean.slideshowInterval)}"
                 android:textSize="@dimen/title_level2_text_size" />
 
 
@@ -89,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:text="@{String.valueOf(bean.slideshowStartPage)}"
+                android:text="@{String.valueOf(readerSlideshowBean.slideshowStartPage)}"
                 android:textSize="@dimen/title_level2_text_size" />
 
         </LinearLayout>
@@ -112,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:text="@{String.valueOf(bean.slideshowTotalPage)}"
+                android:text="@{String.valueOf(readerSlideshowBean.slideshowTotalPage)}"
                 android:textSize="@dimen/title_level2_text_size" />
 
         </LinearLayout>
@@ -121,7 +122,7 @@
             android:id="@+id/cb_auto_open_book"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:checked="@{bean.bootCompletedAtoTest}"
+            android:checked="@{readerSlideshowBean.bootCompletedAtoTest}"
             android:text="@string/auto_open_when_boot_completed"
             android:textSize="@dimen/title_level2_text_size" />
 
