--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -4,7 +4,7 @@
 
     <data>
         <variable name="bean" type="com.onyx.test.mytest.binding.FragmentTab01Model"/>
-        <variable name="readerSlideshowBean" type="com.onyx.test.mytest.model.bean.ReaderSlideshowBean"/>
+        <!--<variable name="readerSlideshowBean" type="com.onyx.test.mytest.model.bean.ReaderSlideshowBean"/>-->
     </data>
 
     <LinearLayout
@@ -36,7 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{readerSlideshowBean.testFilePath}"
+                android:text="@{bean.readerSlideshowBean.testFilePath}"
                 android:textSize="@dimen/title_level2_text_size" />
 
             <Button
@@ -66,7 +66,7 @@
                 android:layout_weight="1"
                 android:inputType="number"
                 android:maxLength="2"
-                android:text="@{String.valueOf(readerSlideshowBean.slideshowInterval)}"
+                android:text="@{String.valueOf(bean.readerSlideshowBean.slideshowInterval)}"
                 android:textSize="@dimen/title_level2_text_size" />
 
 
@@ -90,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:text="@{String.valueOf(readerSlideshowBean.slideshowStartPage)}"
+                android:text="@{String.valueOf(bean.readerSlideshowBean.slideshowStartPage)}"
                 android:textSize="@dimen/title_level2_text_size" />
 
         </LinearLayout>
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:text="@{String.valueOf(readerSlideshowBean.slideshowTotalPage)}"
+                android:text="@{String.valueOf(bean.readerSlideshowBean.slideshowTotalPage)}"
                 android:textSize="@dimen/title_level2_text_size" />
 
         </LinearLayout>
@@ -122,7 +122,7 @@
             android:id="@+id/cb_auto_open_book"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:checked="@{readerSlideshowBean.bootCompletedAtoTest}"
+            android:checked="@{bean.readerSlideshowBean.bootCompletedAtoTest}"
             android:text="@string/auto_open_when_boot_completed"
             android:textSize="@dimen/title_level2_text_size" />
 
