--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -3,8 +3,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="bean" type="com.onyx.test.mytest.binding.FragmentTab01Model"/>
-        <!--<variable name="readerSlideshowBean" type="com.onyx.test.mytest.model.bean.ReaderSlideshowBean"/>-->
+
+        <variable
+            name="bean"
+            type="com.onyx.test.mytest.binding.FragmentTab01Model"/>
     </data>
 
     <LinearLayout
@@ -18,7 +20,7 @@
             android:layout_margin="8dp"
             android:gravity="center"
             android:text="@string/kreader_test"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,22 +31,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/file_name"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:textSize="@dimen/title_level2_text_size"/>
 
             <EditText
                 android:id="@+id/et_file_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{bean.readerSlideshowBean.testFilePath}"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:text="@={bean.readerSlideshowBean.testFilePath}"
+                android:textSize="@dimen/title_level2_text_size"/>
 
             <Button
                 android:id="@+id/btn_file_select"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/select"
-                android:onClick="@{bean::onSelectFileClick}"/>
+                android:onClick="@{bean::onSelectFileClick}"
+                android:text="@string/select"/>
 
         </LinearLayout>
 
@@ -57,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/slide_interval"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:textSize="@dimen/title_level2_text_size"/>
 
             <EditText
                 android:id="@+id/et_slide_interval"
@@ -66,8 +68,8 @@
                 android:layout_weight="1"
                 android:inputType="number"
                 android:maxLength="2"
-                android:text="@{String.valueOf(bean.readerSlideshowBean.slideshowInterval)}"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:text='@={bean.readerSlideshowBean.slideshowInterval + ""}'
+                android:textSize="@dimen/title_level2_text_size"/>
 
 
         </LinearLayout>
@@ -82,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:maxLength="6"
                 android:text="@string/slide_start_page"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:textSize="@dimen/title_level2_text_size"/>
 
             <EditText
                 android:id="@+id/et_slide_start_page"
@@ -90,8 +92,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:text="@{String.valueOf(bean.readerSlideshowBean.slideshowStartPage)}"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:text='@={bean.readerSlideshowBean.slideshowStartPage + ""}'
+                android:textSize="@dimen/title_level2_text_size"/>
 
         </LinearLayout>
 
@@ -105,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:maxLength="6"
                 android:text="@string/slide_total_page"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:textSize="@dimen/title_level2_text_size"/>
 
             <EditText
                 android:id="@+id/et_slide_total_page"
@@ -113,8 +115,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:text="@{String.valueOf(bean.readerSlideshowBean.slideshowTotalPage)}"
-                android:textSize="@dimen/title_level2_text_size" />
+                android:text='@={bean.readerSlideshowBean.slideshowTotalPage + ""}'
+                android:textSize="@dimen/title_level2_text_size"/>
 
         </LinearLayout>
 
@@ -122,17 +124,17 @@
             android:id="@+id/cb_auto_open_book"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:checked="@{bean.readerSlideshowBean.bootCompletedAtoTest}"
+            android:checked="@={bean.readerSlideshowBean.bootCompletedAtoTest}"
             android:text="@string/auto_open_when_boot_completed"
-            android:textSize="@dimen/title_level2_text_size" />
+            android:textSize="@dimen/title_level2_text_size"/>
 
         <Button
             android:id="@+id/btn_set"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/settings"
             android:onClick="@{bean::onSettingsClick}"
-            android:textSize="@dimen/title_level2_text_size" />
+            android:text="@string/settings"
+            android:textSize="@dimen/title_level2_text_size"/>
 
     </LinearLayout>
 </layout>
