--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -25,6 +25,6 @@
             android:id="@+id/tv_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@{bean.info}"/>
+            android:text="@={bean.info}"/>
     </LinearLayout>
 </layout>
