--- a/app/src/main/res/layout/item_recycleview.xml
+++ b/app/src/main/res/layout/item_recycleview.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="itemModel"
+            type="com.onyx.test.mytest.binding.RecycleViewItemModel" />
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
