--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,4 +11,17 @@
 		<!--<item>Theme.DeviceDefault</item>-->
 		<item>自定义主题</item>
 	</string-array>
+
+	<string-array name="screen_timeout_values" translatable="false">
+		<!-- Do not translate. -->
+		<item>180000</item>
+		<!-- Do not translate. -->
+		<item>300000</item>
+		<!-- Do not translate. -->
+		<item>600000</item>
+		<!-- Do not translate. -->
+		<item>1800000</item>
+		<!-- Do not translate. -->
+		<item>-1</item>
+	</string-array>
 </resources>
