--- a/mupdf/src/main/res/layout/main_buttons_bar.xml
+++ b/mupdf/src/main/res/layout/main_buttons_bar.xml
@@ -365,26 +365,21 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
 
-        <!--<SeekBar-->
-        <!--android:id="@+id/sb_pageSlider"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_margin="0dp"-->
-        <!--android:thumb="@drawable/seek_thumb"-->
-        <!--android:progressDrawable="@drawable/seek_progress"-->
-        <!--android:paddingLeft="16dp"-->
-        <!--android:paddingRight="16dp"-->
-        <!--android:paddingTop="12dp"-->
-        <!--android:paddingBottom="8dp"-->
-        <!--android:background="@color/toolbar"-->
-        <!--/>-->
         <SeekBar
-            android:id="@+id/sb_pageSlider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
+        android:id="@+id/pageSlider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="0dp"
+        android:thumb="@drawable/seek_thumb"
+        android:progressDrawable="@drawable/seek_progress"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="8dp"
+        android:background="@color/toolbar"
+        />
 
         <TextView
             android:id="@+id/pageNumber"
