--- a/app/src/main/res/layout/fragment_tab4.xml
+++ b/app/src/main/res/layout/fragment_tab4.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:hint="请输入文件名"
-                android:text="@{bean.selectfilePath}"/>
+                android:text="@={bean.selectfilePath}"/>
 
             <Button
                 android:id="@+id/btn_select_file"
