--- a/mupdf/src/main/res/layout/main_buttons_bar.xml
+++ b/mupdf/src/main/res/layout/main_buttons_bar.xml
@@ -387,7 +387,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/page_num"
+            android:background="@color/toolbar"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#FFFFFF" />
 
@@ -399,7 +399,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/page_num"
+        android:background="@color/toolbar"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#FFFFFF" />
 
