--- a/mupdf/src/main/res/values/colors.xml
+++ b/mupdf/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="canvas">#404040</color>
-	<color name="toolbar">#C0000000</color>
-	<color name="page_indicator">#C0202020</color>
-	<color name="busy_indicator">#C0202020</color>
-	<color name="button_normal">#00000000</color>
-	<color name="button_pressed">#FF2572AC</color>
+	<color name="canvas">#33000000</color>
+	<color name="toolbar">#33000000</color>
+	<color name="page_indicator">#33000000</color>
+	<color name="busy_indicator">#33000000</color>
+	<color name="button_normal">#33000000</color>
+	<color name="button_pressed">#33000000</color>
 	<color name="text_normal">#FFFFFF</color>
 	<color name="text_pressed">#FFFFFF</color>
 	<color name="text_border_normal">#000000</color>
